[project]
name = "None-Electron-Fan"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
requires-python = "==3.11.*"
authors = [
    {name = "qingzhixing", email = "qzsptmail@protonmail.com"},
]
dependencies = ["nonebot2[fastapi]>=2.4.1", "nonebot-adapter-onebot>=2.4.6", "pip>=25.0", "nonebot-plugin-status>=0.9.0"]
license = {text = "MIT"}

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_status", "nonebot_plugin_setu"]
plugin_dirs = []
builtin_plugins = ["echo"]

[tool.pdm]
distribution = false
