[project]
name = "None-Electron-Fan"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
requires-python = "==3.11.*"
authors = [{ name = "qingzhixing", email = "qzsptmail@protonmail.com" }]
dependencies = [
    "nonebot2>=2.4.1",
    "nonebot-adapter-onebot>=2.4.6",
    "pip>=25.0",
    "nonebot-plugin-status>=0.9.0",
    "nb-cli>=1.4.2",
    "nonebot-plugin-setu-now>=0.6.6",
    "httpx>=0.28.1",
    "socksio>=1.0.0",
    "nonebot-adapter-console>=0.6.0",
    "nonebot-plugin-nbnhhsh-q>=0.1.1",
]
license = { text = "MIT" }

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Console", module_name = "nonebot.adapters.console" },
]
plugins = [
    "nonebot_plugin_status",
    "nonebot_plugin_setu_now",
    "nonebot_plugin_nbnhhsh_q",
]
plugin_dirs = ["fan-plugins/"]
builtin_plugins = ["echo"]

[tool.pdm]
distribution = false
